--- a/data/abilities_new_format/bubblegum.yaml
+++ b/data/abilities_new_format/bubblegum.yaml
@@ -5,28 +5,30 @@
   Skills:
     - !Skill
       dice:
-        - 5
-        - 5
-      powerup: Null
-      modifiers: Null
-      text: "Deal 3 DMG and give 2 shield"
-    - !Skill
-      dice:
+        - 6
         - X
       powerup: Null
       modifiers: Null
-      text: "Move shield from this creature to another you control"
+      text: "INCREMENT 1 for every {{D:1}} in your roll. Then deal 1 damage for every {{D:6}} in your roll."
     - !Skill
       dice: Null
-      powerup: 6
+      powerup: 7
       modifiers: Null
-      text: "Deal 2 DMG and give 1 shield"
+      text: "Deal 2 damage or give 2 heart."
     - !Skill
-      dice:
-        - 6
+      dice: 
+        - 2
       powerup: Null
       modifiers: Null
-      text: "Gain shield equal to the last amount of DMG done"
+      text: "If target creatures has more health at the end of the turn than it has right now, give it +1 strength."
+    - !Skill
+      dice:
+        - S
+        - S
+        - S
+      powerup: Null
+      modifiers: Null
+      text: "Give creature 4 heart +1 strength and -1 fortitude"
   AmountInDeck: 1 
 
 - Name: "POP!"
@@ -36,28 +38,30 @@
   Skills:
     - !Skill
       dice: 
-        - 5
+        - 6
       powerup: Null
       modifiers: Null
       text: "Deal 2 DMG"
     - !Skill
       dice: Null
-      powerup: 6
+      powerup: 9
       modifiers: Null
-      text: "Deal 2 DMG"
+      text: "Deal 1 damage for every dice your opponent used."
     - !Skill
       dice: 
         - 1
         - 5
       powerup: Null
       modifiers: Null
-      text: "Gain 4 shield"
+      text: "Give +3 heart. INCREMENT 3."
     - !Skill
       dice: 
-        - 2
+        - M
+        - M
+        - M
       powerup: Null
       modifiers: Null
-      text: "Reduce your shield by X and increment rolled dice by X divided as you choose"
+      text: "If target creature has has 7 or less heart deal 6 damage to it."
   AmountInDeck: 1 
 
 - Name: "Vulcanize"
@@ -66,27 +70,31 @@
   TexturePath: "images/stable-diff/attacks/bubblegum/vulcanize.png"
   Skills:
     - !Skill
+      dice: Null
+      powerup: 7
+      modifiers: Null
+      text: "Deal 2 damage. Give a creature 1 heart."
+    - !Skill
       dice: 
-        - 2
+        - 6
       powerup: Null
       modifiers: Null
-      text: "Deal 2 DMG"
-    - !Skill
-      dice: Null
-      powerup: 6
-      modifiers: Null
-      text: "Deal 1 DMG and increment a die by 1"
+      text: "INCREMENT 3"
     - !Skill
       dice: 
         - 5
       powerup: Null
       modifiers: Null
-      text: "Each player gives 6 shield to their creatures, divided as they choose."
+      text: ""
     - !Skill
-      dice: Null
+      dice: 
+        - S
+        - S
+        - S
+        - S
       powerup: 9
       modifiers: Null
-      text: "Remove all shields from all creatures, deal DMG to them equal to their own shield"
+      text: "Give 5 heart, +1 strength and -1 fortitude to all your creatures."
   AmountInDeck: 1 
 
 - Name: "Stretched Taut"
@@ -98,24 +106,28 @@
       dice: Null
       powerup: 4
       modifiers: Null
-      text: "Gain 1 shield"
+      text: "Give 1 heart."
     - !Skill
       dice: 
-        - 5
+        - 6
       powerup: Null
       modifiers: Null
-      text: "If this creature has 2 or more shield, deal 3 DMG, else deal 1 DMG"
+      text: "If this creature has 10 or more heart INCREMENT 3, else INCREMENT 2."
     - !Skill
       dice: Null
-      powerup: 12
+      powerup: 10
       modifiers: Null 
-      text: "Deal 3 DMG"
+      text: "Deal 3 DMG."
     - !Skill
       dice: 
-        - 3
+        - M
+        - M
+        - M
+        - X
+        - X
       powerup: Null
       modifiers: Null
-      text: "Remove this creature's shield, gain a die equal to the shield's value."
+      text: "Roll 2 new dice. INCREMENT 4. Deal 1 damage for every dice with value 4 or higher. Take 1 damage for every dice with value 3 or lower."
   AmountInDeck: 1 
 
 - Name: "Handy plasticity"
